/*
 * SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package model

import (
	"context"
	"testing"

	"github.com/google/uuid"
	"github.com/stretchr/testify/assert"

	"github.com/nvidia/bare-metal-manager-rest/db/pkg/db"
)

// TestSetupSchema creates/resets the schema
func TestSetupSchema(t *testing.T, dbSession *db.Session) {
	// create User table
	err := dbSession.DB.ResetModel(context.Background(), (*User)(nil))
	assert.Nil(t, err)
	// create Infrastructure Provider table
	err = dbSession.DB.ResetModel(context.Background(), (*InfrastructureProvider)(nil))
	assert.Nil(t, err)
	// create Tenant table
	err = dbSession.DB.ResetModel(context.Background(), (*Tenant)(nil))
	assert.Nil(t, err)
	// create TenantAccount table
	err = dbSession.DB.ResetModel(context.Background(), (*TenantAccount)(nil))
	assert.Nil(t, err)
	// create Site table
	err = dbSession.DB.ResetModel(context.Background(), (*Site)(nil))
	assert.Nil(t, err)
	// create TenantSite table
	err = dbSession.DB.ResetModel(context.Background(), (*TenantSite)(nil))
	assert.Nil(t, err)
	// create Network Security Group table
	err = dbSession.DB.ResetModel(context.Background(), (*NetworkSecurityGroup)(nil))
	assert.Nil(t, err)
	// create NVLink Logical Partition table
	err = dbSession.DB.ResetModel(context.Background(), (*NVLinkLogicalPartition)(nil))
	assert.Nil(t, err)
	// create VPC table
	err = dbSession.DB.ResetModel(context.Background(), (*Vpc)(nil))
	assert.Nil(t, err)
	// create Domain table
	err = dbSession.DB.ResetModel(context.Background(), (*Domain)(nil))
	assert.Nil(t, err)
	// create Allocation table
	err = dbSession.DB.ResetModel(context.Background(), (*Allocation)(nil))
	assert.Nil(t, err)
	// create Allocation Constraint table
	err = dbSession.DB.ResetModel(context.Background(), (*AllocationConstraint)(nil))
	assert.Nil(t, err)
	// create IPBlock table
	err = dbSession.DB.ResetModel(context.Background(), (*IPBlock)(nil))
	assert.Nil(t, err)
	// create VpcPrefix table
	err = dbSession.DB.ResetModel(context.Background(), (*VpcPrefix)(nil))
	assert.Nil(t, err)
	// create Subnet table
	err = dbSession.DB.ResetModel(context.Background(), (*Subnet)(nil))
	assert.Nil(t, err)
	// create InstanceType table
	err = dbSession.DB.ResetModel(context.Background(), (*InstanceType)(nil))
	assert.Nil(t, err)
	// create Operating System table
	err = dbSession.DB.ResetModel(context.Background(), (*OperatingSystem)(nil))
	assert.Nil(t, err)
	// create Operating System Site Association table
	err = dbSession.DB.ResetModel(context.Background(), (*OperatingSystemSiteAssociation)(nil))
	assert.Nil(t, err)
	// create Machine table
	err = dbSession.DB.ResetModel(context.Background(), (*Machine)(nil))
	assert.Nil(t, err)
	// create Instance table
	err = dbSession.DB.ResetModel(context.Background(), (*Instance)(nil))
	assert.Nil(t, err)
	// create MachineInstanceType table
	err = dbSession.DB.ResetModel(context.Background(), (*MachineInstanceType)(nil))
	assert.Nil(t, err)
	// create MachineCapability table
	err = dbSession.DB.ResetModel(context.Background(), (*MachineCapability)(nil))
	assert.Nil(t, err)
	// create MachineInterface table
	err = dbSession.DB.ResetModel(context.Background(), (*MachineInterface)(nil))
	assert.Nil(t, err)
	// create Interface table
	err = dbSession.DB.ResetModel(context.Background(), (*Interface)(nil))
	assert.Nil(t, err)
	// create Status Detail table
	err = dbSession.DB.ResetModel(context.Background(), (*StatusDetail)(nil))
	assert.Nil(t, err)
	// create InfiniBandPartition table
	err = dbSession.DB.ResetModel(context.Background(), (*InfiniBandPartition)(nil))
	assert.Nil(t, err)
	// create InfiniBandInterface table
	err = dbSession.DB.ResetModel(context.Background(), (*InfiniBandInterface)(nil))
	assert.Nil(t, err)
	// create ssh key table
	err = dbSession.DB.ResetModel(context.Background(), (*SSHKey)(nil))
	assert.Nil(t, err)
	// create ssh key group table
	err = dbSession.DB.ResetModel(context.Background(), (*SSHKeyGroup)(nil))
	assert.Nil(t, err)
	// create ssh key association table
	err = dbSession.DB.ResetModel(context.Background(), (*SSHKeyAssociation)(nil))
	assert.Nil(t, err)
	// create ssh key group site association table
	err = dbSession.DB.ResetModel(context.Background(), (*SSHKeyGroupSiteAssociation)(nil))
	assert.Nil(t, err)
	// create ssh key group instance association table
	err = dbSession.DB.ResetModel(context.Background(), (*SSHKeyGroupInstanceAssociation)(nil))
	assert.Nil(t, err)
	// create network security group table
	err = dbSession.DB.ResetModel(context.Background(), (*NetworkSecurityGroup)(nil))
	assert.Nil(t, err)
	// create sku table
	err = dbSession.DB.ResetModel(context.Background(), (*SKU)(nil))
	assert.Nil(t, err)
	// create expected machine table
	err = dbSession.DB.ResetModel(context.Background(), (*ExpectedMachine)(nil))
	assert.Nil(t, err)
	// create nvlink interface table (must be after Instance and NVLinkLogicalPartition)
	err = dbSession.DB.ResetModel(context.Background(), (*NVLinkInterface)(nil))
	assert.Nil(t, err)
	// create dpu extension service table
	err = dbSession.DB.ResetModel(context.Background(), (*DpuExtensionService)(nil))
	assert.Nil(t, err)
	// create dpu extension service deployment table
	err = dbSession.DB.ResetModel(context.Background(), (*DpuExtensionServiceDeployment)(nil))
	assert.Nil(t, err)
}

// TestBuildUser creates a test User
func TestBuildUser(t *testing.T, dbSession *db.Session, starfleetID string, org string, roles []string) *User {
	uDAO := NewUserDAO(dbSession)

	orgData := OrgData{
		org: Org{
			ID:          123,
			Name:        org,
			DisplayName: org,
			OrgType:     "ENTERPRISE",
			Roles:       roles,
		},
	}

	input := UserCreateInput{
		StarfleetID: &starfleetID,
		Email:       db.GetStrPtr("jdoe@test.com"),
		FirstName:   db.GetStrPtr("John"),
		LastName:    db.GetStrPtr("Doe"),
		OrgData:     orgData,
	}
	u, err := uDAO.Create(context.Background(), nil, input)
	assert.Nil(t, err)

	return u
}

// TestBuildInfrastructureProvider creates a test Infrastructure Provider
func TestBuildInfrastructureProvider(t *testing.T, dbSession *db.Session, name string, org string, user *User) *InfrastructureProvider {
	ipDAO := NewInfrastructureProviderDAO(dbSession)

	ip, err := ipDAO.CreateFromParams(context.Background(), nil, name, db.GetStrPtr("Test Provider"), org, db.GetStrPtr(org), user)
	assert.Nil(t, err)

	return ip
}

// TestBuildTenant creates a test Tenant
func TestBuildTenant(t *testing.T, dbSession *db.Session, name string, org string, user *User) *Tenant {
	tnDAO := NewTenantDAO(dbSession)

	tncfg := TenantConfig{}

	tn, err := tnDAO.CreateFromParams(context.Background(), nil, name, db.GetStrPtr("Test Tenant"), org, db.GetStrPtr(org), &tncfg, user)
	assert.Nil(t, err)

	return tn
}

// TestBuildSite creates a test Site
func TestBuildSite(t *testing.T, dbSession *db.Session, ip *InfrastructureProvider, name string, user *User) *Site {
	stDAO := NewSiteDAO(dbSession)

	st, err := stDAO.Create(context.Background(), nil, SiteCreateInput{
		Name:                          name,
		DisplayName:                   db.GetStrPtr("Test Site"),
		Description:                   db.GetStrPtr("Test Site Description"),
		Org:                           ip.Org,
		InfrastructureProviderID:      ip.ID,
		SiteControllerVersion:         db.GetStrPtr("1.0.0"),
		SiteAgentVersion:              db.GetStrPtr("1.0.0"),
		RegistrationToken:             db.GetStrPtr("1234-5678-9012-3456"),
		RegistrationTokenExpiration:   db.GetTimePtr(db.GetCurTime()),
		IsInfinityEnabled:             true,
		SerialConsoleHostname:         db.GetStrPtr("TestSshHostname"),
		IsSerialConsoleEnabled:        true,
		SerialConsoleIdleTimeout:      db.GetIntPtr(30),
		SerialConsoleMaxSessionLength: db.GetIntPtr(60),
		Status:                        SiteStatusPending,
		CreatedBy:                     user.ID,
	})
	assert.Nil(t, err)

	return st
}

// TestBuildTenantSite creates a test Tenant/Site relationship
func TestBuildTenantSite(t *testing.T, dbSession *db.Session, tn *Tenant, st *Site, config map[string]interface{}, user *User) *TenantSite {
	tsDAO := NewTenantSiteDAO(dbSession)

	ts, err := tsDAO.Create(context.Background(), nil, TenantSiteCreateInput{
		TenantID:  tn.ID,
		TenantOrg: tn.Org,
		SiteID:    st.ID,
		Config:    config,
		CreatedBy: user.ID,
	})
	assert.Nil(t, err)

	return ts
}

// TestBuildInstanceType creates a test Instance Type
func TestBuildInstanceType(t *testing.T, dbSession *db.Session, name string, ip *InfrastructureProvider, site *Site, user *User) *InstanceType {
	instanceType := &InstanceType{
		ID:                       uuid.New(),
		Name:                     name,
		DisplayName:              &name,
		Description:              db.GetStrPtr("Instance Type Description"),
		ControllerMachineType:    nil,
		InfrastructureProviderID: ip.ID,
		SiteID:                   &site.ID,
		Status:                   InstanceTypeStatusPending,
		CreatedBy:                user.ID,
	}

	_, err := dbSession.DB.NewInsert().Model(instanceType).Exec(context.Background())
	assert.Nil(t, err)

	return instanceType
}

// TestBuildIPBlock creates a test IP Block
func TestBuildIPBlock(t *testing.T, dbSession *db.Session, name string, site *Site, tenant *Tenant, routingType, prefix string, blockSize int, protocolVersion string) *IPBlock {
	ipbDAO := NewIPBlockDAO(dbSession)

	ipb, err := ipbDAO.Create(
		context.Background(),
		nil,
		IPBlockCreateInput{
			Name:                     name,
			SiteID:                   site.ID,
			InfrastructureProviderID: site.InfrastructureProviderID,
			TenantID:                 &tenant.ID,
			RoutingType:              routingType,
			Prefix:                   prefix,
			PrefixLength:             blockSize,
			ProtocolVersion:          protocolVersion,
			Status:                   IPBlockStatusPending,
			CreatedBy:                db.GetUUIDPtr(uuid.New()),
		},
	)
	assert.Nil(t, err)

	return ipb
}

// TestBuildAllocation creates a test Allocation
func TestBuildAllocation(t *testing.T, dbSession *db.Session, name string, st *Site, tn *Tenant, user *User) *Allocation {
	alDAO := NewAllocationDAO(dbSession)

	al, err := alDAO.Create(context.Background(), nil, AllocationCreateInput{
		Name:                     name,
		Description:              db.GetStrPtr("Test Allocation Description"),
		InfrastructureProviderID: st.InfrastructureProviderID,
		TenantID:                 tn.ID,
		SiteID:                   st.ID,
		Status:                   AllocationStatusPending,
		CreatedBy:                user.ID,
	})
	assert.Nil(t, err)

	return al
}

// TestBuildAllocationConstraint creates a test Allocation Constraint of Instance Type
func TestBuildAllocationConstraint(t *testing.T, dbSession *db.Session, al *Allocation, it *InstanceType, ipb *IPBlock, constraintValue int, user *User) *AllocationConstraint {
	var resourceID uuid.UUID
	if it != nil {
		resourceID = it.ID
	} else if ipb != nil {
		resourceID = ipb.ID
	}

	acDAO := NewAllocationConstraintDAO(dbSession)
	ac, err := acDAO.CreateFromParams(context.Background(), nil, al.ID, AllocationResourceTypeInstanceType, resourceID, AllocationConstraintTypeReserved, constraintValue, nil, user.ID)
	assert.Nil(t, err)

	return ac
}

// TestBuildVPC creates a test VPC
func TestBuildVPC(t *testing.T, dbSession *db.Session, name string, ip *InfrastructureProvider, tn *Tenant, st *Site, networkVirtualizationType *string, controllerID *uuid.UUID, labels map[string]string, status string, user *User, nsgID *string) *Vpc {
	vDAO := NewVpcDAO(dbSession)

	input := VpcCreateInput{
		Name:                      name,
		Description:               db.GetStrPtr("Test Vpc"),
		Org:                       tn.Org,
		InfrastructureProviderID:  ip.ID,
		TenantID:                  tn.ID,
		SiteID:                    st.ID,
		NetworkVirtualizationType: networkVirtualizationType,
		NetworkSecurityGroupID:    nsgID,
		ControllerVpcID:           controllerID,
		Labels:                    labels,
		Status:                    status,
		CreatedBy:                 *user,
	}

	vpc, err := vDAO.Create(context.Background(), nil, input)
	assert.Nil(t, err)

	return vpc
}

// TestBuildSubnet creates a test subnet
func TestBuildSubnet(t *testing.T, dbSession *db.Session, name string, tn *Tenant, vpc *Vpc, controllerID *uuid.UUID, ipv4Block *IPBlock, status string, user *User) *Subnet {
	subnetDAO := NewSubnetDAO(dbSession)

	subnet, err := subnetDAO.Create(context.Background(), nil, SubnetCreateInput{
		Name:                       name,
		Description:                db.GetStrPtr("Test Subnet"),
		Org:                        tn.Org,
		SiteID:                     vpc.SiteID,
		VpcID:                      vpc.ID,
		TenantID:                   tn.ID,
		ControllerNetworkSegmentID: controllerID,
		RoutingType:                &ipv4Block.RoutingType,
		IPv4Prefix:                 &ipv4Block.Prefix,
		IPv4BlockID:                &ipv4Block.ID,
		PrefixLength:               ipv4Block.PrefixLength,
		Status:                     status,
		CreatedBy:                  user.ID,
	})
	assert.Nil(t, err)

	return subnet
}

// TestBuildMachine creates a test Machine
func TestBuildMachine(t *testing.T, dbSession *db.Session, ip *InfrastructureProvider, site *Site, instanceType *InstanceType, controllerMachineType *string) *Machine {
	defMacAddr := "00:1B:44:11:3A:B7"
	machine := &Machine{
		ID:                       uuid.NewString(),
		InfrastructureProviderID: ip.ID,
		SiteID:                   site.ID,
		ControllerMachineID:      uuid.NewString(),
		ControllerMachineType:    controllerMachineType,
		Metadata:                 nil,
		DefaultMacAddress:        &defMacAddr,
		Status:                   MachineStatusInitializing,
	}

	if instanceType != nil {
		machine.InstanceTypeID = &instanceType.ID
	}

	_, err := dbSession.DB.NewInsert().Model(machine).Exec(context.Background())
	assert.Nil(t, err)

	return machine
}

// TestBuildMachineInstanceType creates a test Machine/Instance Type association
func TestBuildMachineInstanceType(t *testing.T, dbSession *db.Session, machine *Machine, instanceType *InstanceType) *MachineInstanceType {
	mit := &MachineInstanceType{
		ID:             uuid.New(),
		MachineID:      machine.ID,
		InstanceTypeID: instanceType.ID,
	}

	_, err := dbSession.DB.NewInsert().Model(mit).Exec(context.Background())
	assert.Nil(t, err)

	return mit
}

// TestBuildOperatingSystem creates a test os
func TestBuildOperatingSystem(t *testing.T, dbSession *db.Session, name string, tn *Tenant, status string, user *User) *OperatingSystem {
	operatingSystem := &OperatingSystem{
		ID:        uuid.New(),
		Name:      name,
		TenantID:  db.GetUUIDPtr(tn.ID),
		Status:    status,
		CreatedBy: user.ID,
	}
	_, err := dbSession.DB.NewInsert().Model(operatingSystem).Exec(context.Background())
	assert.Nil(t, err)
	return operatingSystem
}

// TestBuildInstance creates a test instance
func TestBuildInstance(t *testing.T, dbSession *db.Session, name string, al *Allocation, ac *AllocationConstraint, tn *Tenant, ip *InfrastructureProvider, st *Site, it *InstanceType, vpc *Vpc, m *Machine, os *OperatingSystem) *Instance {
	ins := &Instance{
		ID:                       uuid.New(),
		Name:                     name,
		AllocationID:             &al.ID,
		AllocationConstraintID:   &ac.ID,
		TenantID:                 tn.ID,
		InfrastructureProviderID: ip.ID,
		SiteID:                   st.ID,
		InstanceTypeID:           &it.ID,
		VpcID:                    vpc.ID,
		MachineID:                &m.ID,
		OperatingSystemID:        &os.ID,
		Hostname:                 nil,
		UserData:                 nil,
		IpxeScript:               nil,
		Created:                  db.GetCurTime(),
		Updated:                  db.GetCurTime(),
		Status:                   InstanceStatusReady,
	}
	_, err := dbSession.DB.NewInsert().Model(ins).Exec(context.Background())
	assert.Nil(t, err)
	return ins
}

// TestBuildInterface creates a test interface
func TestBuildInterface(t *testing.T, dbSession *db.Session, ins *Instance, sbID *uuid.UUID, vpID *uuid.UUID, isPhysical bool, status string) *Interface {
	ifc := &Interface{
		ID:          uuid.New(),
		InstanceID:  ins.ID,
		SubnetID:    sbID,
		VpcPrefixID: vpID,
		IsPhysical:  isPhysical,
		Status:      status,
	}
	_, err := dbSession.DB.NewInsert().Model(ifc).Exec(context.Background())
	assert.Nil(t, err)
	return ifc
}

// TestBuildNetworkSecurityGroup creates a test NSG
func TestBuildNetworkSecurityGroup(t *testing.T, dbSession *db.Session, name string, tn *Tenant, st *Site) *NetworkSecurityGroup {
	nsg := &NetworkSecurityGroup{
		ID:        uuid.NewString(),
		Name:      name,
		SiteID:    st.ID,
		TenantOrg: tn.Org,
		TenantID:  tn.ID,
		Status:    NetworkSecurityGroupStatusReady,
	}
	_, err := dbSession.DB.NewInsert().Model(nsg).Exec(context.Background())
	assert.Nil(t, err)
	return nsg
}
